--- a/class-07/demo/index.html
+++ b/class-07/demo/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        
         <title>Adopt a Sith Lord</title>
         <link rel="stylesheet" href="style.css" type="text/css">    
     </head>
@@ -8,15 +9,16 @@
         <header>
             <nav>
                 <ul>
-                    <li>Home</li>
-                    <li>Adopt</li>
-                    <li>About Us</li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="https://starwars.fandom.com/wiki/Sith_Lord#:~:text=Sith%20Lord%2C%20also%20known%20as,translated%20to%20%22Dark%20Lord%22." target="_blank">Sith Lord Info</a></li>
+                    <li><a href="https://starwars.fandom.com/wiki/Order_of_the_Sith_Lords" target="_blank">Sith Lord List</a></li>
                 </ul>
             </nav>
         </header>
         <main>
             <section id="hero_section">
                 <h1>Adopt A Sith Lord</h1>
+                <script src="app.js"></script>
             </section>
             <section id="other">
                 <img id="hero" src="https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/f/902c3299-8bb7-45f3-a964-d8724d924896/d68164f-fc95562c-2cb0-4c6b-aa8b-a4752387b701.jpg?token=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJzdWIiOiJ1cm46YXBwOiIsImlzcyI6InVybjphcHA6Iiwib2JqIjpbW3sicGF0aCI6IlwvZlwvOTAyYzMyOTktOGJiNy00NWYzLWE5NjQtZDg3MjRkOTI0ODk2XC9kNjgxNjRmLWZjOTU1NjJjLTJjYjAtNGM2Yi1hYThiLWE0NzUyMzg3YjcwMS5qcGcifV1dLCJhdWQiOlsidXJuOnNlcnZpY2U6ZmlsZS5kb3dubG9hZCJdfQ.8vo6Wdkz4CVDhFJW6tKoARwwAmry6TS2GcwJtSIWpT0">
@@ -41,7 +43,7 @@
         <footer>
             <p>Created by Roger Huba for Code 102</p>
         </footer>
-        ><script src="app.js"></script>
+        
     </body>
 </html>
 
